Rust An example to show how to use web form.

--- a/program.htm
+++ b/program.htm
@@ -335,6 +335,10 @@ SQLx</a><br>
 <a href="program/rust/webserver.htm">
 Web Server</a><br>
 
+&lowast;
+<a href="program/rust/webform.htm">
+Web Server (Form)</a><br>
+
 &oplus;
 <b>SDL v1.2</b><br>
 
