Rust Refined code.

--- a/program/rust/hello.htm
+++ b/program/rust/hello.htm
@@ -52,18 +52,19 @@
 1. <a href="http://bzz.wallizard.com:8081/share/books/RUST/Programming%20Rust%202nd%20Edition.pdf">pdf</a><br>
 2. <a href="https://www.rust-lang.org/learn/get-started">get-started</a><br><br>
 
-如下：
+產生樣板
 </p>
 <pre>
 $ cargo new hello
-     Created binary (application) `hello` package
+</pre><br>
 
-$ cd hello/
+<p>
+執行
+</p>
+<pre>
+$ cd hello
 $ cargo run
-   Compiling hello v0.1.0 (/home/steward/Downloads/hello)
-    Finished dev [unoptimized + debuginfo] target(s) in 1.67s
-     Running `target/debug/hello`
-Hello, world!
+    Hello, world!
 </pre><br>
 
 <p>
