Rust Refined code.

--- a/program/rust/webform.htm
+++ b/program/rust/webform.htm
@@ -104,8 +104,9 @@ fn get_index() -&gt; HttpResponse {
               &lt;title&gt;Input Test&lt;/title&gt;
               &lt;form action = "/test" method = "post"&gt;
               &lt;input type = "text" name = "v1" /&gt;
-              &lt;input type = "text" name = "v2" /&gt;&lt;button type = "submit"&gt;
-                  Send&lt;/button&gt;&lt;/form&gt;
+              &lt;input type = "text" name = "v2" /&gt;
+              &lt;button type = "submit"&gt;Send&lt;/button&gt;
+              &lt;/form&gt;
               "#,
         )
 }
