Rust An example to show how to create web application(CRUD).

--- a/program.htm
+++ b/program.htm
@@ -339,6 +339,10 @@ Web Server</a><br>
 <a href="program/rust/webform.htm">
 Web Server (Form)</a><br>
 
+&lowast;
+<a href="program/rust/webcrud.htm">
+Web Server (CRUD)</a><br>
+
 &oplus;
 <b>SDL v1.2</b><br>
 
