Nintendo 3DS How to include resource into 3dsx file with static link.

--- a/emu.htm
+++ b/emu.htm
@@ -558,6 +558,10 @@ build devkitpro (CROSSBUILD=aarch64-linux-gnu)</a><br>
 build devkitpro (CROSSBUILD=arm-linux-gnueabihf)</a><br>
 
 &lowast;
+<a href="emu/3ds/include_static_link_resource.htm">
+如何將圖片資源打包到3dsx檔案</a><br>
+
+&lowast;
 <a href="emu/3ds/fix_crossbuild.htm">
 解決"gcc.cc: undefined reference to host_detect_local_cpu(int, char const**)"問題</a><br>
 
