SFML How to prepare environment for development.

--- a/program.htm
+++ b/program.htm
@@ -80,6 +80,7 @@
   <a href="#nasm"><img src="img/photos/nasm.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="NASM"/></a>
   <a href="#hla"><img src="img/photos/hla.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="HLA"/></a>
   <a href="#sdl"><img src="img/photos/sdl.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SDL"/></a>
+  <a href="#sfml"><img src="img/photos/sfml.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SFML"/></a>
   <a href="#python"><img src="img/photos/python.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Python"/></a>
   <a href="#golang"><img src="img/photos/golang.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Golang"/></a>
   <a href="#gtk"><img src="img/photos/gtk.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Gtk"/></a>
@@ -825,6 +826,19 @@ SDL</h3>
       &emsp;&emsp;&emsp;&emsp;&lowast;
       <a href="program/sdl/es2/cpp_shader.htm">
       Shader</a><br>
+<br><br><br><br>
+
+<div id="sfml"></div>
+<h3><img src="img/photos/sfml.jpg" class="floatLeft"/>
+SFML</h3>
+<hr size="1"><br><br><br><br><br>
+
+&oplus;
+<b>C/C++</b><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="program/sfml/cpp_setup.htm">
+  開發環境</a><br>
 <br><br><br><br>
 
 <div id="golang"></div>
