SFML An example to show how to program 'hello, world!' in C/C++.

--- a/program.htm
+++ b/program.htm
@@ -839,6 +839,10 @@ SFML</h3>
   &emsp;&emsp;&lowast;
   <a href="program/sfml/cpp_setup.htm">
   開發環境</a><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="program/sfml/cpp_hello.htm">
+  Hello, world!</a><br>
 <br><br><br><br>
 
 <div id="golang"></div>
