GoLang Updated setup page and corrected typo.

--- a/program.htm
+++ b/program.htm
@@ -851,6 +851,10 @@ Golang</h3>
 <hr size="1"><br><br><br><br><br>
 
 &lowast;
+<a href="program/golang/setup.htm">
+開發環境</a><br>
+
+&lowast;
 <a href="program/golang/hello.htm">
 Hello, world!</a><br>
 <br><br><br><br>
