--- a/program/golang/setup.htm
+++ b/program/golang/setup.htm
@@ -45,30 +45,16 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>Golang</h3>
-<p><b>Hello, world!</b></p>
+<p><b>開發環境</b></p>
 <hr size="1">
 <p>
 參考資訊：<br>
 1. <a href="https://golang.org/doc/tutorial/getting-started">doc</a><br><br>
 
-main.go
-</p>
-<pre class="brush:cpp">
-package main
-
-import "fmt"
-
-func main() {
-    fmt.Println("Hello, world!")
-}
-</pre><br>
-
-<p>
-執行
+司徒目前是在Debian 10 x64環境上做開發，安裝方式如下：
 </p>
 <pre>
-$ go run main.go
-    Hello, world!
+$ sudo apt-get install golang -y
 </pre><br>
 
 <p>
