Debian How to build binutils with static link.

--- a/system.htm
+++ b/system.htm
@@ -299,6 +299,10 @@ VirtualBox產生vboxnet0 192.168.56.1</a><br>
 <b>ARM</b><br>
 
   &emsp;&emsp;&lowast;
+  <a href="system/debian/arm_build_binutils.htm">
+  build binutils (static link)</a><br>
+  
+  &emsp;&emsp;&lowast;
   <a href="system/debian/arm_qemu_armel.htm">
   使用qemu-system-arm安裝系統(armel)</a><br>
   
