(ARM Cortex-A7) H3 (NanoPi NEO) We just need to solder a button for input testing.

--- a/mcu.htm
+++ b/mcu.htm
@@ -2711,6 +2711,10 @@ Layout</a><br>
 電路圖</a><br>
 
 &lowast;
+<a href="mcu/h3/pcb.htm">
+開發板</a><br>
+
+&lowast;
 <a href="mcu/h3/layout.htm">
 Layout</a><br>
 <br><br><br><br>
