(ARM Cortex-A7) H3 (NanoPi NEO) Added links.

--- a/mcu.htm
+++ b/mcu.htm
@@ -2678,6 +2678,10 @@ build kernel 4.10.15</a><br>
 Layout</a><br>
 
 &lowast;
+<a href="handheld/miyoo/mksunxi.htm">
+mksunxi.c</a><br>
+
+&lowast;
 <a href="mcu/h3-m1/r_gpio.htm">
 如何初始化R_GPIO</a><br>
 
@@ -2717,6 +2721,10 @@ Layout</a><br>
 &lowast;
 <a href="mcu/h3/layout.htm">
 Layout</a><br>
+
+&lowast;
+<a href="handheld/miyoo/mksunxi.htm">
+mksunxi.c</a><br>
 <br><br><br><br>
 
 <div id="pb"></div>
