GNU Refined code.

--- a/program/gnu/cpp_hello.htm
+++ b/program/gnu/cpp_hello.htm
@@ -48,6 +48,9 @@
 <p><b>Hello, world!</b></p>
 <hr size="1">
 <p>
+參考資訊：<br>
+1. <a href="https://man7.org/linux/man-pages/man3/printf.3.html">man</a><br><br>
+
 main.c
 </p>
 <pre class="brush:cpp">
@@ -55,8 +58,8 @@ main.c
 
 int main(int argc, char** argv)
 {
-  printf("hello, world!\n");
-  return 0;
+    printf("Hello, world!\n");
+    return 0;
 }
 </pre><br>
 
@@ -66,7 +69,7 @@ int main(int argc, char** argv)
 <pre>
 $ gcc main.c -o main
 $ ./main
-  hello, world!
+    Hello, world!
 </pre><br>
 
 <p>
