GNU Refined code.

--- a/program.htm
+++ b/program.htm
@@ -112,7 +112,7 @@ GNU</h3>
 
   &emsp;&emsp;&lowast;
   <a href="program/gnu/cpp_hello.htm">
-  hello, world!</a><br>
+  Hello, world!</a><br>
 
   &emsp;&emsp;&lowast;
   <a href="program/gnu/cpp_popen.htm">
