--- a/program/gnu/cpp_popen.htm
+++ b/program/gnu/cpp_popen.htm
@@ -48,6 +48,9 @@
 <p><b>popen</b></p>
 <hr size="1">
 <p>
+參考資訊：<br>
+1. <a href="https://man7.org/linux/man-pages/man3/popen.3.html">man</a><br><br>
+
 main.c
 </p>
 <pre class="brush:cpp">
@@ -56,16 +59,26 @@ main.c
 
 int main(int argc, char **argv)
 {
-  char buf[255]={0};
-  FILE *fd = popen("uname -r", "r");
-  if(fd){
-    fgets(buf, sizeof(buf), fd);
-    pclose(fd);
+    char buf[255] = {0};
+    FILE *fd = popen("uname -r", "r");
 
-    printf("buf:%s", buf);
-  }
-  return 0;
+    if (fd) {
+        fgets(buf, sizeof(buf), fd);
+        pclose(fd);
+
+        printf("%s", buf);
+    }
+    return 0;
 }
+</pre><br>
+
+<p>
+編譯、執行
+</p>
+<pre>
+$ gcc main.c -o main
+$ ./main
+    4.19.0-9-amd64
 </pre><br>
 
 <p>
