N900 Updated key map for html.

--- a/phone/n900/maemo/vimrc.htm
+++ b/phone/n900/maemo/vimrc.htm
@@ -53,24 +53,26 @@
 </p>
 <pre>
 $ vim ~/.vimrc
-  set nu
-  set nocp
-  set ruler
-  set showcmd
-  set bg=light
-  set hlsearch
-  set showmode
-  set expandtab
-  set tabstop=4
-  set cursorline
-  set autoindent
-  set shiftwidth=4
-  set backspace=indent,eol,start
-  set enc=utf8
-  set fencs=utf8,gbk,gb2312,gb18030
-  set fileencodings=utf-8,gb2312,gb18030,gbk,ucs-bom,cp936,latin1
-  let &amp;t_Co=256
-  syntax on
+    set nu
+    set nocp
+    set ruler
+    set paste
+    set showcmd
+    set bg=light
+    set hlsearch
+    set showmode
+    set expandtab
+    set tabstop=4
+    set autoindent
+    set shiftwidth=4
+    set backspace=indent,eol,start
+    set enc=utf8
+    set fencs=utf8,gbk,gb2312,gb18030
+    set fileencodings=utf-8,gb2312,gb18030,gbk,ucs-bom,cp936,latin1
+    syntax on
+
+    :map 0 :s!&amp;amp;!\&amp;!ge\|:s!&amp;gt;!&gt;!ge\|:s!&amp;lt;!&lt;!ge&lt;CR&gt;
+    :map 1 :s!&amp;!\&amp;amp;!ge\|:s!&gt;!\&amp;gt;!ge\|:s!&lt;!\&amp;lt;!ge&lt;CR&gt;
 </pre><br>
 
 <p>
