N900 Map key for html.

--- a/phone/n900/maemo/vimrc.htm
+++ b/phone/n900/maemo/vimrc.htm
@@ -71,8 +71,8 @@ $ vim ~/.vimrc
     set fileencodings=utf-8,gb2312,gb18030,gbk,ucs-bom,cp936,latin1
     syntax on
 
-    :map 0 :s!&amp;amp;!\&amp;!ge\|:s!&amp;gt;!&gt;!ge\|:s!&amp;lt;!&lt;!ge&lt;CR&gt;
-    :map 1 :s!&amp;!\&amp;amp;!ge\|:s!&gt;!\&amp;gt;!ge\|:s!&lt;!\&amp;lt;!ge&lt;CR&gt;
+    map 0 :s/&amp;amp;/\&amp;/ge\|:'&lt;,'&gt;s/&amp;gt;/&gt;/ge\|:'&lt;,'&gt;s/&amp;lt;/&lt;/ge
+    map 1 :s/&amp;/\&amp;amp;/ge\|:'&lt;,'&gt;s/&gt;/\&amp;gt;/ge\|:'&lt;,'&gt;s/&lt;/\&amp;lt;/ge
 </pre><br>
 
 <p>
