--- a/program/gnu/cpp_popen.htm
+++ b/program/gnu/cpp_popen.htm
@@ -51,6 +51,15 @@
 參考資訊：<br>
 1. <a href="https://man7.org/linux/man-pages/man3/popen.3.html">man</a><br><br>
 
+說明：
+</p>
+<table>
+<tr><th>API</th></tr>
+<tr><td>FILE* popen(const char* command, const char* type);</td></tr>
+<tr><td>int pclose(FILE* stream);</td></tr>
+</table><br>
+
+<p>
 main.c
 </p>
 <pre class="brush:cpp">
