--- a/program/gnu/cpp_backtrace.htm
+++ b/program/gnu/cpp_backtrace.htm
@@ -54,34 +54,35 @@
 main.c
 </p>
 <pre class="brush:cpp">
-#include &lt;stdio.h&gt;
+#include &lt;execinfo.h&gt;
+#include &lt;fcntl.h&gt;
 #include &lt;signal.h&gt;
+#include &lt;stdio.h&gt;
 #include &lt;stdlib.h&gt;
 #include &lt;unistd.h&gt;
-#include &lt;fcntl.h&gt;
-#include &lt;execinfo.h&gt;
 
 void bt(void)
 {
-  int fd=-1, s=0;
-  void *b[255]={0};
+    int s = 0;
+    int fd = -1;
+    void *b[255] = {0};
 
-  fd = open("bt.txt", O_CREAT | O_WRONLY, 0755);
-  if(fd > 0){
-    s = backtrace(b, 255);
-    backtrace_symbols_fd(b, s, fd);
-    close(fd);
-  }
+    fd = open("bt.txt", O_CREAT | O_WRONLY, 0755);
+    if (fd &gt; 0) {
+        s = backtrace(b, 255);
+        backtrace_symbols_fd(b, s, fd);
+        close(fd);
+    }
 }
 
 void test(void)
 {
-  bt();
+    bt();
 }
 
 int main(int argc, char **argv)
 {
-  test();
+    test();
 }
 </pre><br>
 
@@ -89,7 +90,7 @@ int main(int argc, char **argv)
 編譯、執行
 </p>
 <pre>
-$ gcc -rdynamic main.c -o main && ./main && cat bt.txt
+$ gcc -rdynamic main.c -o main &amp;&amp; ./main &amp;&amp; cat bt.txt
   ./main(bt+0x68)[0x5559615fd1cd]
   ./main(test+0x9)[0x5559615fd1fd]
   ./main(main+0x14)[0x5559615fd214]
