--- a/program/gnu/cpp_hello.htm
+++ b/program/gnu/cpp_hello.htm
@@ -45,12 +45,20 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>GNU &gt;&gt; C/C++</h3>
-<p><b>Hello, world!</b></p>
+<p><b>hello, world!</b></p>
 <hr size="1">
 <p>
 參考資訊：<br>
 1. <a href="https://man7.org/linux/man-pages/man3/printf.3.html">man</a><br><br>
 
+說明：
+</p>
+<table>
+<tr><th>API</th></tr>
+<tr><td>int printf(const char* format, ...);</td></tr>
+</table><br>
+
+<p>
 main.c
 </p>
 <pre class="brush:cpp">
@@ -58,7 +66,7 @@ main.c
 
 int main(int argc, char** argv)
 {
-    printf("Hello, world!\n");
+    printf("hello, world!\n");
     return 0;
 }
 </pre><br>
@@ -69,7 +77,7 @@ int main(int argc, char** argv)
 <pre>
 $ gcc main.c -o main
 $ ./main
-    Hello, world!
+    hello, world!
 </pre><br>
 
 <p>
