--- a/program/gnu/cpp_homedir.htm
+++ b/program/gnu/cpp_homedir.htm
@@ -51,14 +51,39 @@
 參考資訊：<br>
 1. <a href="https://stackoverflow.com/questions/2910377/get-home-directory-in-linux">get-home-directory-in-linux</a><br><br>
 
-如下：
+說明：
+</p>
+<table>
+<tr><th>API</th></tr>
+<tr><td>char* getenv(const char* name);</td></tr>
+</table><br>
+
+<p>
+main.c
 </p>
 <pre class="brush:cpp">
 #include &lt;pwd.h&gt;
-#include &lt;unistd.h&gt;
+#include &lt;stdio.h&gt;
+#include &lt;stdlib.h&gt;
 #include &lt;sys/types.h&gt;
+#include &lt;unistd.h&gt;
 
-const char *homedir = getenv("HOME");
+int main(int argc, char **argv)
+{
+    const char *homedir = getenv("HOME");
+
+    printf("%s\n", homedir);
+    return 0;
+}
+</pre><br>
+
+<p>
+編譯、執行
+</p>
+<pre>
+$ gcc main.c -o main
+$ HOME="/tmp" ./main
+    /tmp
 </pre><br>
 
 <p>
