--- a/program/gnu/cpp_scandir.htm
+++ b/program/gnu/cpp_scandir.htm
@@ -48,34 +48,56 @@
 <p><b>scandir</b></p>
 <hr size="1">
 <p>
-相較於readdir()，scandir()提供排序功能，使用者可以使用alphasort或者自定義的排序Callback<br><br>
+參考資訊<br>
+1. <a href="https://man7.org/linux/man-pages/man3/scandir.3.html">man</a><br><br>
 
+相較於readdir()，scandir()提供排序功能，使用者可以使用alphasort或者自定義的排序callback
+</p>
+<table>
+<tr><th>API</th></tr>
+<tr><td>int scandir(const char* dirp, struct dirent*** namelist, int (*filter)(const struct dirent*), int (*compar)(const struct dirent**, const struct dirent**));</td></tr>
+</table><br>
+
+<p>
 main.c
 </p>
 <pre class="brush:cpp">
 #define _DEFAULT_SOURCE
+#include &lt;dirent.h&gt;
 #include &lt;stdio.h&gt;
 #include &lt;stdlib.h&gt;
 #include &lt;string.h&gt;
-#include &lt;dirent.h&gt;
 
 int main(int argc, char** argv)
 {
-  int c=0, n=0;
-  struct dirent **namelist=NULL;
+    int c = 0, n = 0;
+    struct dirent** namelist = NULL;
 
-  n = scandir("/tmp", &amp;namelist, NULL, alphasort);
-  if(n == -1){
-    return -1;
-  }
+    n = scandir("/tmp", &amp;namelist, NULL, alphasort);
+    if (n == -1) {
+        return -1;
+    }
 
-  for(c=0; c&lt;n; c++){
-    printf("%s\n", namelist[c]-&gt;d_name);
-    free(namelist[c]);
-  }
-  free(namelist);
-  return 0;
+    for (c = 0; c &lt; n; c++) {
+        printf("%s\n", namelist[c]-&gt;d_name);
+        free(namelist[c]);
+    }
+    free(namelist);
+    return 0;
 }
+</pre><br>
+
+<p>
+編譯、執行
+</p>
+<pre>
+$ gcc main.c -o main
+$ ./main
+    .
+    ..
+    .ICE-unix
+    .org.chromium.Chromium.vTHjid
+    test
 </pre><br>
 
 <p>
