--- a/phone/n900/maemo/vimrc.htm
+++ b/phone/n900/maemo/vimrc.htm
@@ -56,9 +56,8 @@ $ vim ~/.vimrc
     set nu
     set nocp
     set ruler
-    set paste
     set showcmd
-    set bg=light
+    set bg=dark
     set hlsearch
     set showmode
     set expandtab
