Rust An example to show how to use the method of Monte Carlo to calcuate PI.

--- a/program.htm
+++ b/program.htm
@@ -341,6 +341,10 @@ Web Server (Form)</a><br>
 <a href="program/rust/webcrud.htm">
 Web Server (CRUD)</a><br>
 
+&lowast;
+<a href="program/rust/pi.htm">
+PI - Monte Carlo</a><br>
+
 &oplus;
 <b>SDL v1.2</b><br>
 
