Rust An example to show how to use the method of Monte Carlo to calcuate PI in parallelism.

--- a/program.htm
+++ b/program.htm
@@ -345,6 +345,10 @@ Web Server (CRUD)</a><br>
 <a href="program/rust/pi.htm">
 PI - Monte Carlo</a><br>
 
+&lowast;
+<a href="program/rust/pi_thread.htm">
+PI - Monte Carlo (Parallelism)</a><br>
+
 &oplus;
 <b>SDL v1.2</b><br>
 
