Rust An example to show how to use the method of Monte Carlo to calcuate PI in concurrency.

--- a/program.htm
+++ b/program.htm
@@ -349,6 +349,10 @@ PI - Monte Carlo</a><br>
 <a href="program/rust/pi_thread.htm">
 PI - Monte Carlo (Parallelism)</a><br>
 
+&lowast;
+<a href="program/rust/pi_concurrency.htm">
+PI - Monte Carlo (Concurrency)</a><br>
+
 &oplus;
 <b>SDL v1.2</b><br>
 
