--- a/phone/n900/maemo/vimrc.htm
+++ b/phone/n900/maemo/vimrc.htm
@@ -72,6 +72,7 @@ $ vim ~/.vimrc
 
     map 0 :s/&amp;amp;/\&amp;/ge\|:'&lt;,'&gt;s/&amp;gt;/&gt;/ge\|:'&lt;,'&gt;s/&amp;lt;/&lt;/ge
     map 1 :s/&amp;/\&amp;amp;/ge\|:'&lt;,'&gt;s/&gt;/\&amp;gt;/ge\|:'&lt;,'&gt;s/&lt;/\&amp;lt;/ge
+    map 2 :s/\%xa0/\ /ge
 </pre><br>
 
 <p>
