GNU Refined code.

--- a/program/gnu/cpp_backtrace.htm
+++ b/program/gnu/cpp_backtrace.htm
@@ -90,7 +90,9 @@ int main(int argc, char **argv)
 編譯、執行
 </p>
 <pre>
-$ gcc -rdynamic main.c -o main &amp;&amp; ./main &amp;&amp; cat bt.txt
+$ gcc main.c -o main
+$ ./main
+$ cat bt.txt
   ./main(bt+0x68)[0x5559615fd1cd]
   ./main(test+0x9)[0x5559615fd1fd]
   ./main(main+0x14)[0x5559615fd214]
