--- a/program/gnu/cpp_rdynamic.htm
+++ b/program/gnu/cpp_rdynamic.htm
@@ -75,22 +75,17 @@ main.c
 
 typedef void hello(void);
 
-void out(const char* buf)
+void out(const char *buf)
 {
     printf("%s", buf);
 }
 
-int main(int argc, char** argv)
+int main(int argc, char **argv)
 {
-    void* dlh = dlopen("./hello.so", RTLD_NOW);
-    if (dlh == NULL) {
-        printf("ERR: %s\n", dlerror());
-        return -1;
-    }
-
-    hello* p = dlsym(dlh, "hello");
+    void *h = dlopen("./hello.so", RTLD_NOW);
+    hello *p = dlsym(h, "hello");
     p();
-    dlclose(dlh);
+    dlclose(h);
     return 0;
 }
 </pre><br>
