--- a/program/gnu/cpp_zip.htm
+++ b/program/gnu/cpp_zip.htm
@@ -51,79 +51,98 @@
 main.c
 </p>
 <pre class="brush:cpp">
+#include &lt;fcntl.h&gt;
+#include &lt;stdint.h&gt;
 #include &lt;stdio.h&gt;
 #include &lt;stdlib.h&gt;
-#include &lt;stdint.h&gt;
-#include &lt;zlib.h&gt;
-#include &lt;fcntl.h&gt;
 #include &lt;unistd.h&gt;
+#include &lt;zlib.h&gt;
 
-static char file[32*1024*1024]={0};
-static char zip[32*1024*1024]={0};
-static char unzip[32*1024*1024]={0};
+#define MAX_BUF (32 * 1024 * 1024)
 
-int zip_compress(uint8_t* src, int slen, uint8_t* dst, int dlen)
+char zip[MAX_BUF] = {0};
+char file[MAX_BUF] = {0};
+char unzip[MAX_BUF] = {0};
+
+int zip_compress(uint8_t *src, int slen, uint8_t *dst, int dlen)
 {
-  int err, ret=-1;
-  z_stream stream={0};
+    int err = -1;
+    int ret = -1;
+    z_stream stream = {0};
 
-  stream.total_in = stream.avail_in = slen;
-  stream.total_out = stream.avail_out = dlen;
-  stream.next_in = src;
-  stream.next_out = dst;
-  err = deflateInit(&amp;stream, Z_DEFAULT_COMPRESSION);
-  if(err == Z_OK){
-    err = deflate(&amp;stream, Z_FINISH);
-    if(err == Z_STREAM_END){
-      ret = stream.total_out;
+    stream.total_in = stream.avail_in = slen;
+    stream.total_out = stream.avail_out = dlen;
+    stream.next_in = src;
+    stream.next_out = dst;
+    err = deflateInit(&amp;stream, Z_DEFAULT_COMPRESSION);
+    if (err == Z_OK) {
+        err = deflate(&amp;stream, Z_FINISH);
+        if (err == Z_STREAM_END) {
+            ret = stream.total_out;
+        }
     }
-  }
-  deflateEnd(&amp;stream);
-  return ret;
+    deflateEnd(&amp;stream);
+    return ret;
 }
 
-int zip_decompress(uint8_t* src, int slen, uint8_t* dst, int dlen)
+int zip_decompress(uint8_t *src, int slen, uint8_t *dst, int dlen)
 {
-  int err, ret=-1;
-  z_stream stream={0};
-  
-  stream.total_in = stream.avail_in = slen;
-  stream.total_out = stream.avail_out = dlen;
-  stream.next_in = src;
-  stream.next_out = dst;
-  err = inflateInit(&amp;stream);
-  if(err == Z_OK){
-    err = inflate(&amp;stream, Z_FINISH);
-    if(err == Z_STREAM_END){
-      ret = stream.total_out;
+    int err = -1;
+    int ret = -1;
+    z_stream stream = {0};
+
+    stream.total_in = stream.avail_in = slen;
+    stream.total_out = stream.avail_out = dlen;
+    stream.next_in = src;
+    stream.next_out = dst;
+    err = inflateInit(&amp;stream);
+    if (err == Z_OK) {
+        err = inflate(&amp;stream, Z_FINISH);
+        if (err == Z_STREAM_END) {
+            ret = stream.total_out;
+        }
     }
-  }
-  inflateEnd(&amp;stream);
-  return ret;
+    inflateEnd(&amp;stream);
+    return ret;
 }
 
-int main(int argc, char** argv)
+int main(int argc, char **argv)
 {
-  int r, fd;
-  
-  fd = open("xxx.bin", O_RDONLY);
-  r = read(fd, file, sizeof(file));
-  close(fd);
-  printf("file length: %d\n", r);
+    int r = 0, fd = -1;
 
-  r = zip_compress(file, r, zip, sizeof(zip));
-  fd = open("xxx.zip", O_CREAT | O_WRONLY);
-  write(fd, zip, r);
-  close(fd);
-  printf("zip length: %d\n", r);
+    fd = open("xxx.bin", O_RDONLY);
+    r = read(fd, file, sizeof(file));
+    close(fd);
+    printf("file length: %d\n", r);
 
-  r = zip_decompress(zip, r, unzip, sizeof(unzip));
-  fd = open("xxx.unzip", O_CREAT | O_WRONLY);
-  write(fd, unzip, r);
-  close(fd);
-  printf("unzip length: %d\n", r);
-  return 0;
+    r = zip_compress(file, r, zip, sizeof(zip));
+    fd = open("xxx.zip", O_CREAT | O_WRONLY);
+    write(fd, zip, r);
+    close(fd);
+    printf("zip length: %d\n", r);
+
+    r = zip_decompress(zip, r, unzip, sizeof(unzip));
+    fd = open("xxx.unzip", O_CREAT | O_WRONLY);
+    write(fd, unzip, r);
+    close(fd);
+    printf("unzip length: %d\n", r);
+    return 0;
 }
+</pre><br>
+
+<p>
+編譯、執行
+</p>
+<pre>
+$ gcc main.c -o main -lz
+$ echo "123" &gt; xxx.bin
+$ ./main
+    file length: 4
+    zip length: 12
+    unzip length: 4
+
+$ cat xxx.unzip
+    123
 </pre><br>
 
 <p>
