--- a/program/gnu/cpp_input_event.htm
+++ b/program/gnu/cpp_input_event.htm
@@ -48,6 +48,35 @@
 <p><b>input_event</b></p>
 <hr size="1">
 <p>
+參考資訊：<br>
+1. <a href="https://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git/tree/include/uapi/linux/input.h">input.h</a><br><br>
+
+對於SDL無法取得的按鍵數值，另一種作法就是直接對input device讀取，需要注意的地方是，read()預設是使用block方式讀取
+</p>
+<pre class="brush:cpp">
+struct input_event {
+#if (__BITS_PER_LONG != 32 || !defined(__USE_TIME_BITS64)) &amp;&amp; !defined(__KERNEL__)
+	struct timeval time;
+#define input_event_sec time.tv_sec
+#define input_event_usec time.tv_usec
+#else
+	__kernel_ulong_t __sec;
+#if defined(__sparc__) &amp;&amp; defined(__arch64__)
+	unsigned int __usec;
+	unsigned int __pad;
+#else
+	__kernel_ulong_t __usec;
+#endif
+#define input_event_sec  __sec
+#define input_event_usec __usec
+#endif
+	__u16 type;
+	__u16 code;
+	__s32 value;
+};
+</pre><br>
+
+<p>
 main.c
 </p>
 <pre class="brush:cpp">
@@ -57,22 +86,33 @@ main.c
 #include &lt;fcntl.h&gt;
 #include &lt;linux/input.h&gt;
 
-int main(int argc, char** argv)
+int main(int argc, char **argv)
 {
-  int fd=-1;
-  struct input_event ev={0};
+    int fd = -1;
+    struct input_event ev = {0};
 
-  fd = open("/dev/input/event0", O_RDONLY);
-  if(fd > 0){
-    while(read(fd, &amp;ev, sizeof(struct input_event))){
-      if(ev.type == EV_KEY){
-        printf("code:%d, value:%d\n", ev.code, ev.value);
-      }
+    fd = open("/dev/input/event0", O_RDONLY);
+    if (fd &gt; 0) {
+        while (read(fd, &amp;ev, sizeof(struct input_event))) {
+            if (ev.type == EV_KEY) {
+                printf("code:%d, value:%d\n", ev.code, ev.value);
+            }
+        }
+        close(fd);
     }
-    close(fd);
-  }
-  return 0;
+    return 0;
 }
+</pre><br>
+
+<p>
+編譯、執行
+</p>
+<pre>
+$ gcc main.c -o main
+$ ./main
+    code:28, value:0
+    code:29, value:1
+    code:46, value:1
 </pre><br>
 
 <p>
