F(x)tec Pro1 X How to build android-simg2img.

--- a/phone.htm
+++ b/phone.htm
@@ -2066,6 +2066,10 @@ F(x)tec Pro1 X</h3>
   <a href="phone/pro1x/so_lxc.htm">
   如何安裝LXC</a><br>
 
+  &emsp;&emsp;&lowast;
+  <a href="phone/pro1x/build_android-simg2img.htm">
+  build android-simg2img</a><br>
+
 &oplus;
 <b>Ubuntu Touch</b><br>
 
