--- a/phone.htm
+++ b/phone.htm
@@ -2067,6 +2067,10 @@ F(x)tec Pro1 X</h3>
   如何安裝LXC</a><br>
 
   &emsp;&emsp;&lowast;
+  <a href="phone/pro1x/resize_home.htm">
+  如何擴展home.img空間成256GB</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="phone/pro1x/build_android-simg2img.htm">
   build android-simg2img</a><br>
 
