Game Boy Advance How to build gbatool.

--- a/emu.htm
+++ b/emu.htm
@@ -348,6 +348,10 @@ LCD</a><br>
 <a href="emu/gba/mem.htm">
 記憶體</a><br>  
 
+&lowast;
+<a href="emu/gba/build_gbatool.htm">
+build gbatool</a><br>
+
 &oplus;
 <b>Assembly</b><br>
 
