F(x)tec Pro1 X Adjust title.

--- a/phone.htm
+++ b/phone.htm
@@ -2063,16 +2063,19 @@ F(x)tec Pro1 X</h3>
   安裝系統</a><br>
   
   &emsp;&emsp;&lowast;
-  <a href="phone/pro1x/so_lxc.htm">
-  如何安裝LXC</a><br>
-
-  &emsp;&emsp;&lowast;
   <a href="phone/pro1x/resize_home.htm">
   如何擴展home.img空間成256GB</a><br>
 
   &emsp;&emsp;&lowast;
   <a href="phone/pro1x/build_android-simg2img.htm">
   build android-simg2img</a><br>
+
+  &emsp;&emsp;&oplus;
+  LXC<br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="phone/pro1x/so_lxc.htm">
+    如何安裝LXC</a><br>
 
 &oplus;
 <b>Ubuntu Touch</b><br>
