F(x)tec Pro1 X Fix ibus issue in debian 12.

--- a/phone.htm
+++ b/phone.htm
@@ -2077,6 +2077,10 @@ F(x)tec Pro1 X</h3>
     <a href="phone/pro1x/so_lxc.htm">
     如何安裝LXC</a><br>
 
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="phone/pro1x/so_ibus.htm">
+    解決IBus選字視窗的位置錯亂問題</a><br>
+
 &oplus;
 <b>Ubuntu Touch</b><br>
 
