--- a/phone/pro1x/so_lxc.htm
+++ b/phone/pro1x/so_lxc.htm
@@ -45,7 +45,7 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>F(x)tec Pro1 X &gt;&gt; Sailfish &gt;&gt; LXC</h3>
-<p><b>如何安裝LXC</b></p>
+<p><b>安裝LXC</b></p>
 <hr size="1">
 <p>
 參考資料：<br>
