F(x)tec Pro1 X How to deploy debian 12 in lxc.

--- a/phone.htm
+++ b/phone.htm
@@ -2075,7 +2075,11 @@ F(x)tec Pro1 X</h3>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="phone/pro1x/so_lxc.htm">
-    如何安裝LXC</a><br>
+    安裝LXC</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="phone/pro1x/so_debian12.htm">
+    安裝Debian 12</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="phone/pro1x/so_ibus.htm">
