F(x)tec Pro1 X How to do screenshot.

--- a/phone.htm
+++ b/phone.htm
@@ -2063,6 +2063,10 @@ F(x)tec Pro1 X</h3>
   安裝系統</a><br>
   
   &emsp;&emsp;&lowast;
+  <a href="phone/pro1x/screenshot.htm">
+  如何screenshot</a><br>
+  
+  &emsp;&emsp;&lowast;
   <a href="phone/pro1x/resize_home.htm">
   如何擴展home.img空間成256GB</a><br>
 
