F(x)tec Pro1 X How to build kernel 4.19.157.

--- a/phone.htm
+++ b/phone.htm
@@ -2071,6 +2071,10 @@ F(x)tec Pro1 X</h3>
   如何擴展home.img空間成256GB</a><br>
 
   &emsp;&emsp;&lowast;
+  <a href="phone/pro1x/so_build_kernel.htm">
+  build kernel 4.19.157</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="phone/pro1x/build_android-simg2img.htm">
   build android-simg2img</a><br>
 
