--- a/phone.htm
+++ b/phone.htm
@@ -2090,6 +2090,10 @@ F(x)tec Pro1 X</h3>
     安裝Debian 12</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="phone/pro1x/so_mount.htm">
+    mount directory</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="phone/pro1x/so_ibus.htm">
     解決IBus選字視窗的位置錯亂問題</a><br>
 
