--- a/phone.htm
+++ b/phone.htm
@@ -2063,6 +2063,10 @@ F(x)tec Pro1 X</h3>
   安裝系統</a><br>
   
   &emsp;&emsp;&lowast;
+  <a href="phone/pro1x/keymap.htm">
+  修改鍵盤按鍵數值</a><br>
+  
+  &emsp;&emsp;&lowast;
   <a href="phone/pro1x/screenshot.htm">
   如何screenshot</a><br>
   
