GNU Refined code.

--- a/program/gnu/cpp_dlsym.htm
+++ b/program/gnu/cpp_dlsym.htm
@@ -58,7 +58,7 @@ dl.c
 
 void hello(void)
 {
-  printf("hello, world!\n");
+    printf("hello, world!\n");
 }
 </pre><br>
 
@@ -71,13 +71,13 @@ main.c
 
 typedef void hello(void);
 
-int main(int argc, char** argv)
+int main(int argc, char **argv)
 {
-  void* dlh = dlopen("./hello.so", RTLD_NOW);
-  hello *p = dlsym(dlh, "hello");
-  p();
-  dlclose(dlh);
-  return 0;
+    void* h = dlopen("./hello.so", RTLD_NOW);
+    hello *p = dlsym(h, "hello");
+    p();
+    dlclose(h);
+    return 0;
 }
 </pre><br>
 
@@ -85,10 +85,10 @@ int main(int argc, char** argv)
 編譯、執行
 </p>
 <pre>
-$ gcc dl.c -shared -fPIC -o hello.so
+$ gcc dl.c -shared -o hello.so
 $ gcc main.c -o main -ldl
 $ ./main
-  hello, world!
+    hello, world!
 </pre>
 <p>
 P.S. 當執行dlopen()失敗時，可以呼叫dlerror()取得失敗的原因
