--- a/program/gnu/cpp_multiline_string.htm
+++ b/program/gnu/cpp_multiline_string.htm
@@ -51,30 +51,33 @@
 參考資訊：<br>
 1. <a href="https://stackoverflow.com/questions/1135841/c-multiline-string-literal">c-multiline-string-literal</a><br><br>
 
-如下：
+main.c
 </p>
 <pre class="brush:cpp">
 #include &lt;stdio.h&gt;
 
-int main(int argc, char** argv)
+int main(int argc, char **argv)
 {
-  const char* s=R""""(
-C++
-Multiline String
-  )"""";
-
-  printf(s);
+    const char* s = R""(++
+    C++
+    Multiline String
+--)"";
+     
+    printf(s);
+    return 0;
 }
 </pre><br>
 
 <p>
-輸出
+編譯、執行
 </p>
 <pre>
-$ ./test
-
-C++
-Multiline String
+$ gcc main.c -o main
+$ ./main
+++
+    C++
+    Multiline String
+--
 </pre><br>
 
 <p>
