--- a/program/gnu/cpp_readdir.htm
+++ b/program/gnu/cpp_readdir.htm
@@ -54,21 +54,33 @@
 main.c
 </p>
 <pre class="brush:cpp">
-#include &lt;stdio.h&gt;
 #include &lt;dirent.h&gt;
+#include &lt;stdio.h&gt;
 
-int main(int argc, char** argv)
+int main(int argc, char **argv)
 {
-  DIR *dir=NULL;
-  struct dirent *ent=NULL;
+    DIR *dir = NULL;
+    struct dirent *ent = NULL;
 
-  dir = opendir("/tmp");
-  while((ent = readdir(dir)) != NULL){
-    printf("%s\n", ent-&gt;d_name);
-  }
-  closedir(dir);
-  return 0;
+    dir = opendir("/tmp");
+    while ((ent = readdir(dir)) != NULL) {
+        printf("%s\n", ent-&gt;d_name);
+    }
+    closedir(dir);
+    return 0;
 }
+</pre><br>
+
+<p>
+編譯、執行
+</p>
+<pre>
+$ gcc main.c -o main
+$ ./main
+    ..
+    .XIM-unix
+    .org.chromium.Chromium.u5B6YJ
+    test
 </pre><br>
 
 <p>
